created custom alerts

--- a/index.html
+++ b/index.html
@@ -56,5 +56,10 @@
         <p class="captionDelete">Delete</p>
       </div>
     </div>
+
+    <div class="alert">
+      <p class="alertMessage">Please select at least one option</p>
+      <button class="okay">okay</button>
+    </div>
   </body>
 </html>
